allow importing gamesheet seasons
